--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 # Copy to .env and fill values for local development
 
 # Discord bot token
-DISCORD_TOKEN=MTM0ODE4NzIwMDU3NTI0MjMxMw.GxyqiQ.TS2reJ-2CvK7jmqN9G0On1vKipPae-72cuIoic
+DISCORD_TOKEN=your_discord_bot_token_here
 
 # Core
-BOT_TOKEN=MTM0ODE4NzIwMDU3NTI0MjMxMw.GxyqiQ.TS2reJ-2CvK7jmqN9G0On1vKipPae-72cuIoic
+BOT_TOKEN=your_discord_bot_token_here
 SINGLE_TENANT_MODE=false       # true = local JSON; false = SaaS (DB)
 AUTO_FALLBACK=true             # auto-switch to local mode if provider fails
 
